# ginga-mulsemedia

./: .gitignore  .project  Makefile  Makefile.in  README  README.md  aclocal.m4  appveyor.yml  config.status  configure  genesis.sh  interaction-config.json  libtool
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
build-cmake/: CMakeLists.txt
intMod/: EyeGazeModule.cpp  EyeGazeModule.h  FacialExpressionRecognition.cpp  FacialExpressionRecognition.h  GazeRecognition.cpp  GazeRecognition.h  HandPoseRecognition.cpp  HandPoseRecognition.h  InteractionModule.cpp  InteractionModule.h  VoiceRecognition.cpp  VoiceRecognition.h
interactionModules/: InteractionModule.h  json.h  voiceRecognition.cpp
lib/: Composition.cpp  Composition.h  Device.cpp  Device.h  DeviceCalibration.cpp  DeviceCalibration.h  DeviceLight.cpp  DeviceLight.h  DeviceScent.cpp  DeviceScent.h  Document.cpp  Document.h  Effect.cpp  Effect.h  EffectPlayer.cpp  EffectPlayer.h  EffectPlayerLight.cpp  EffectPlayerLight.h  EffectPlayerScent.cpp  EffectPlayerScent.h  Event.cpp  Event.h  Formatter.cpp  Formatter.h  InteractionManager.cpp  InteractionManager.h  Makefile  Makefile.am  Makefile.in  Media.cpp  Media.h  MediaSettings.cpp  MediaSettings.h  Object.cpp  Object.h  Object_.cpp  Parser.cpp  Parser.h  ParserDeviceFile.cpp  ParserDeviceFile.h  (+30 more)
loadUDMod/: ParserUserDescription.cpp  ParserUserDescription.h  StreamFile.cpp
src/: Makefile  Makefile.am  Makefile.in  ginga  ginga.cpp
src-gui/: Makefile  Makefile.in  gingagui
src/.deps/: ginga-ginga.Po
src/.libs/: ginga
tests-ncl/: Makefile  Makefile.in  test-Event-Voice-Recognition.ncl  test-current-time.ncl  test-link-multimodal.ncl  test-link-onKeySel.ncl  test-media-aud-4grid.ncl  test-media-aud-anim-background.ncl  test-media-aud-anim-dimensions.ncl  test-media-aud-anim-transparency.ncl  test-media-aud-dimensions.ncl  test-media-aud-empty.ncl  test-media-aud-explicitDur.ncl  (+102 more)
(+64 files in other folders)
